@@ -77,7 +77,7 @@
               type: keyword
               count: 4
 
-            - name: uncaught
+            - name: handled
               type: boolean
               count: 2
               description: Indicator whether the error was caught somewhere in the code or not.
